--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,20 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: Ghazi Majdoub
+email: gmajdoub.website@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  I am Ghazi Majdoub.
+  Welcome to my personal website.
+  I post all my work here and it is all open.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+
+github_username:  Dev-Now
+linkedin_username: ghazi-majdoub-64401838
+linkedin_name: Ghazi Majdoub
+gitlab_username: G_M_Dev
+patreon_username: gmajdoub
 
 # Build settings
 theme: minima
