--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ _site
 .jekyll-cache
 .jekyll-metadata
 vendor
+_posts/2021-08-31-welcome-to-jekyll.markdown
+_posts/2021-10-20-test-ar-post.markdown
