--- a/_config.yml
+++ b/_config.yml
@@ -27,6 +27,10 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 title_ar: غازي المجدوب
+description_ar: >-
+  أنا غازي المجدوب.
+  مرحبا على موقعي الخاصّ.
+  تجدون هنا أعمالي الكاملة وهي مفتوحة ومتاحة للجميع.
 
 show_excerpts: true
 
